# lvvi

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: mediapipe.h
include/mediapipe/: mediapipe_api.h  mediapipe_interface.h  mediapipe_log.h
lib/win/: mediapipe.lib
mediapipe/graphs/face_mesh/: face_mesh_desktop_live.pbtxt
test/: test.cpp  test_hand_track.cpp  test_mediapipe.cpp
